--- a/umeter.ioc
+++ b/umeter.ioc
@@ -36,7 +36,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_xTaskGetHandle=1
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,configRECORD_STACK_HIGH_ADDRESS,INCLUDE_xTaskGetHandle,configMINIMAL_STACK_SIZE,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,64,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=def,24,64,task_default,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=64
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
 FREERTOS.configTOTAL_HEAP_SIZE=10240
