--- a/umeter.ioc
+++ b/umeter.ioc
@@ -50,36 +50,40 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
-Mcu.IP2=IWDG
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP2=I2C2
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin17=VP_IWDG_VS_IWDG
-Mcu.Pin18=VP_SYS_VS_tim1
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_tim1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-Mcu.Pin5=PB12
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PA13
-Mcu.PinsNb=19
+Mcu.Pin5=PB1
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -115,6 +119,12 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB12.GPIOParameters=PinState,GPIO_Label
 PB12.GPIO_Label=SPI2_CS
 PB12.Locked=true
@@ -179,7 +189,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_IWDG_Init-IWDG-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
