--- a/umeter.ioc
+++ b/umeter.ioc
@@ -63,28 +63,29 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PB15
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=PB9
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin21=VP_IWDG_VS_IWDG
-Mcu.Pin22=VP_SYS_VS_tim1
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PB1
-Mcu.Pin6=PB10
-Mcu.Pin7=PB11
-Mcu.Pin8=PB12
-Mcu.Pin9=PB13
-Mcu.PinsNb=23
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_IWDG_VS_IWDG
+Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PB1
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -95,7 +96,7 @@ NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -113,6 +114,13 @@ NVIC.TimeBaseIP=TIM1
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -138,11 +146,6 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB3.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PB3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB3.GPIO_PuPd=GPIO_PULLUP
-PB3.Locked=true
-PB3.Signal=GPXTI3
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
@@ -218,8 +221,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SPI2.CalculateBaudRate=18.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
