--- a/umeter.ioc
+++ b/umeter.ioc
@@ -5,7 +5,17 @@ CAD.provider=
 Dma.Request0=USART1_TX
 Dma.Request1=USART2_TX
 Dma.Request2=USART2_RX
-Dma.RequestsNb=3
+Dma.Request3=USART1_RX
+Dma.RequestsNb=4
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.Instance=DMA1_Channel5
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART1_TX.0.Instance=DMA1_Channel4
 Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -93,6 +103,7 @@ MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -210,7 +221,7 @@ RCC.APB2TimFreq_Value=72000000
 RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=72000000
 RCC.PLLCLKFreq_Value=72000000
 RCC.PLLMCOFreq_Value=36000000
@@ -219,7 +230,8 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=72000000
+RCC.USBFreq_Value=48000000
+RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
