--- a/umeter.ioc
+++ b/umeter.ioc
@@ -53,6 +53,8 @@ FREERTOS.configTOTAL_HEAP_SIZE=12288
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.ClockSpeed=100000
+I2C2.IPParameters=ClockSpeed
 IWDG.IPParameters=Prescaler
 IWDG.Prescaler=IWDG_PRESCALER_128
 KeepUserPlacement=false
@@ -73,29 +75,30 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB4
+Mcu.Pin18=PB5
+Mcu.Pin19=PB6
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_IWDG_VS_IWDG
-Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin20=PB7
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_IWDG_VS_IWDG
+Mcu.Pin24=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
-Mcu.Pin7=PB1
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=24
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PB10
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -140,6 +143,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.Mode=I2C
@@ -194,7 +199,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x1
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
