--- a/umeter.ioc
+++ b/umeter.ioc
@@ -79,10 +79,10 @@ Mcu.Pin10=PB12
 Mcu.Pin11=PB13
 Mcu.Pin12=PB14
 Mcu.Pin13=PB15
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
 Mcu.Pin18=PB9
 Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PD1-OSC_OUT
@@ -130,8 +130,13 @@ PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=PinState
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
 PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -140,6 +145,9 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB10.Mode=I2C
@@ -157,12 +165,6 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB6.Locked=true
-PB6.Mode=Asynchronous
-PB6.Signal=USART1_TX
-PB7.Locked=true
-PB7.Mode=Asynchronous
-PB7.Signal=USART1_RX
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=RST
 PB9.Locked=true
