aht20: reverse power pin polarity, update schematic

--- a/umeter.ioc
+++ b/umeter.ioc
@@ -157,7 +157,9 @@ PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Signal=ADCx_IN8
+PB1.GPIOParameters=PinState
 PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
 PB1.Signal=GPIO_Output
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
