--- a/umeter.ioc
+++ b/umeter.ioc
@@ -90,13 +90,15 @@ Mcu.Pin14=PB14
 Mcu.Pin15=PB15
 Mcu.Pin16=PA9
 Mcu.Pin17=PA10
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_IWDG_VS_IWDG
-Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin24=VP_IWDG_VS_IWDG
+Mcu.Pin25=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -104,7 +106,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -117,6 +119,7 @@ NVIC.DMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Channel7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -146,10 +149,16 @@ PA1.Signal=GPIO_Output
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_ModeDefaultEXTI
+PA15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA15.Locked=true
+PA15.Signal=GPXTI15
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -250,6 +259,8 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
 SPI2.CalculateBaudRate=18.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
