--- a/umeter.ioc
+++ b/umeter.ioc
@@ -82,31 +82,32 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin10=PB1
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA12
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PA15
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin24=VP_IWDG_VS_IWDG
-Mcu.Pin25=VP_SYS_VS_tim1
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_IWDG_VS_IWDG
+Mcu.Pin26=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=26
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -165,6 +166,10 @@ PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
