task_system: toggle gpio for external watchdog IC - Add timeouts for w25q busy ckecks - Toggle gpio with period 1s for external watchdog IC

--- a/umeter.ioc
+++ b/umeter.ioc
@@ -93,10 +93,11 @@ Mcu.Pin17=PA13
 Mcu.Pin18=PA14
 Mcu.Pin19=PA15
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin22=VP_IWDG_VS_IWDG
-Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin20=PB3
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin23=VP_IWDG_VS_IWDG
+Mcu.Pin24=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -104,7 +105,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB10
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -181,6 +182,8 @@ PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB3.Locked=true
+PB3.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=RST
 PB9.Locked=true
