--- a/umeter.ioc
+++ b/umeter.ioc
@@ -68,16 +68,17 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=USART2
+Mcu.IP10=USART1
+Mcu.IP11=USART2
 Mcu.IP2=FREERTOS
-Mcu.IP3=I2C2
-Mcu.IP4=IWDG
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI2
-Mcu.IP8=SYS
-Mcu.IP9=USART1
-Mcu.IPNb=11
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=IWDG
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SPI2
+Mcu.IP9=SYS
+Mcu.IPNb=12
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -94,10 +95,12 @@ Mcu.Pin18=PA14
 Mcu.Pin19=PA15
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin20=PB3
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_IWDG_VS_IWDG
-Mcu.Pin24=VP_SYS_VS_tim1
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin25=VP_IWDG_VS_IWDG
+Mcu.Pin26=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -105,7 +108,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB10
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -184,6 +187,10 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=RST
 PB9.Locked=true
