button: add button to set angle offset

--- a/umeter.ioc
+++ b/umeter.ioc
@@ -55,7 +55,7 @@ FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,c
 FREERTOS.Tasks01=def,24,64,task_default,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMINIMAL_STACK_SIZE=64
 FREERTOS.configRECORD_STACK_HIGH_ADDRESS=1
-FREERTOS.configTOTAL_HEAP_SIZE=12288
+FREERTOS.configTOTAL_HEAP_SIZE=12160
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -95,13 +95,14 @@ Mcu.Pin18=PA14
 Mcu.Pin19=PA15
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin20=PB3
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_SYS_VS_tim1
+Mcu.Pin21=PB4
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_IWDG_VS_IWDG
+Mcu.Pin28=VP_SYS_VS_tim1
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -109,7 +110,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB10
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -188,6 +189,10 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
